# docs-markdown

./: .pre-commit-config.yaml  404.html  README.md  index.html  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: build-documentation.yaml
1. Giới thiệu/1/: index.html
1. Giới thiệu/2/: index.html
3. Chức năng/1/: index.html
4. Bài toán nghiệp vụ/1/: index.html
5. Công nghệ sử dụng/1/: index.html
5. Công nghệ sử dụng/2/: index.html
9. Tài liệu tham khảo/1/: index.html
docs/: index.md
docs/1. Giới thiệu/: cau-hinh.md
docs/3-tham-khao/: api.md
docs/3. Chức năng/: 1.md  index.md
docs/5. Công nghệ sử dụng/: 1.md  2.md
docs/9. Tài liệu tham khảo/: 1.md  index.md
search/: search_index.json
